welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: type mismatch;
 found   : Unit
 required: Int
		setPos(x, y = y + 1)
                            ^ColumnByColumn:7: error: type mismatch;
 found   : Unit
 required: Int
	else {setPos(x = x + 1 , y = 0)}
                       ^